# logfmt-python

./: .gitignore  README.rst  pyproject.toml  setup.cfg
logfmt/: formatter.py  parser.py
tests/: test_parser.py
